Castling rights corrected